////////////////////////////////////////////////////////////////////////////////
/// @file         LoadBalancing.proto
///
/// @author       Michael Catanzaro <michael.catanzaro@mst.edu>
///
/// @description  Declaration of all load balancing message types
///
/// These source code files were created at Missouri University of Science and
/// Technology, and are intended for use in teaching or research. They may be
/// freely copied, modified, and redistributed as long as modified versions are
/// clearly marked as such and this notice is not removed. Neither the authors
/// nor Missouri S&T make any warranty, express or implied, nor assume any legal
/// responsibility for the accuracy, completeness, or usefulness of these files
/// or any information distributed with these files.
///
/// Suggested modifications or questions about these files can be directed to
/// Dr. Bruce McMillin, Department of Computer Science, Missouri University of
/// Science and Technology, Rolla, MO 65409 <ff@mst.edu>.
////////////////////////////////////////////////////////////////////////////////

package freedm.broker.lb;

message StateChangeMessage
{
    required string state = 1;
}

message DraftRequestMessage
{
}

message DraftAgeMessage
{
    required float draft_age = 1;
}

message DraftSelectMessage
{
    required float migrate_step = 1;
}

message DraftAcceptMessage
{
    required float migrate_step = 1;
}

message TooLateMessage
{
    required float migrate_step = 1;
}

message CollectedStateMessage
{
    required float gross_power_flow = 1;
}

message LoadBalancingMessage
{
    optional StateChangeMessage state_change_message = 1;
    optional DraftRequestMessage draft_request_message = 2;
    optional DraftAgeMessage draft_age_message = 3;
    optional DraftSelectMessage draft_select_message = 4;
    optional DraftAcceptMessage draft_accept_message = 5;
    optional TooLateMessage too_late_message = 6;
    optional CollectedStateMessage collected_state_message = 7;
}

